src/main/java/com/example/urlshortener/api/error/UnauthorizedException.java
package com.example.urlshortener.api.error;

import org.springframework.http.HttpStatus;

public class UnauthorizedException extends ApplicationException {

    public UnauthorizedException(String message) {
        super(ErrorCode.UNAUTHORIZED, HttpStatus.UNAUTHORIZED, message);
    }
}
